--- a/index.css
+++ b/index.css
@@ -1,8 +1,28 @@
 *{margin: 0;    padding: 0; font-family: Arial, Helvetica, sans-serif;}
 
+h2.heading {
+    text-align: center;
+    color: white;
+}
+
+h3.subheading {
+    text-align: center;
+    font-size: 14px;
+    font-weight: 300;
+}
+
+h1.heading {
+    text-align: center;
+    padding: 100px 0 50px;
+}
+
+h1.heading {
+    /* text-align: center; */
+}
+
 i.fa.fa-question-circle-o {
     font-size: 20px;
-    padding: 10px;
+    padding: 10px 50px;
 }
 
 a {
