--- a/index.css
+++ b/index.css
@@ -1,5 +1,36 @@
 *{margin: 0;    padding: 0; font-family: Arial, Helvetica, sans-serif;}
 
+img.img-left {
+    width: 50%;
+}
+img.img-right {
+    width: 50%;
+}
+
+h3 {
+    /* text-align: center; */
+    font-size: 14px;
+    font-weight: 300;
+    text-align: left;
+}
+
+
+
+.image-intro {
+    width: 33%;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    /* justify-content: center; */
+}
+.second-box {
+    width: 33%;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    /* justify-content: center; */
+}
+
 h2.heading {
     text-align: center;
     color: white;
@@ -8,6 +39,7 @@ h2.heading {
 h3.subheading {
     text-align: center;
     font-size: 14px;
+    padding-bottom: 30px;
     font-weight: 300;
 }
 
