--- a/index.css
+++ b/index.css
@@ -1,11 +1,148 @@
 *{margin: 0;    padding: 0; font-family: Arial, Helvetica, sans-serif;}
 
+.wrappers {
+    margin-bottom: 10%;
+}
+
+.end-build {
+    margin-bottom: 10%;
+}
+
+.box-container {
+    width: 20%;
+    height: auto;
+    margin: 15px;
+    text-align: center;
+}
+
+.box-container {}
+
+.box-up {
+    display: flex;
+    width: 50%;
+    margin: auto;
+    /* justify-content: space-around; */
+}
+
+.take-button {
+    width: 25%;
+    margin: auto;
+}
+
+input.btn-build {
+    padding: 10px;
+    width: 100%;
+    border-radius: 6px;
+    color: white;
+    background-color: #80b541;
+    border: none;
+    FONT-WEIGHT: 600;
+}
+
+.end-build h1 {
+    text-align: center;
+    padding: 10% 2% 7%;
+}
+
+.container-right {
+    margin-left: 35px;
+}
+
+.inner-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 3%;
+    width: -7%;
+}
+
+.box-container img {
+    width: 100%;
+}
+.container-left .info-right{
+    
+margin: 0 0 0 20px;
+    
+/* line-height: 150%; */
+    
+/* margin-top: 10px; */
+    
+width: 50%;
+}
+.container-left {
+}
+
+.container-left {
+    /* width: 100%; */
+}
+.container-left img{
+    
+width: 40%;
+}
+
+.container-b {
+    width: 50%;
+    display: flex;
+    margin: auto auto auto auto;
+}
+
+h2.title-first-box {
+    margin-bottom: 15px;
+}
+
+.content {
+    font-size: 8px;
+    color: #131624;
+    line-height: 19px;
+    margin-top: 12px;
+}
+
+.box-container .content {
+    margin-top: 0;
+}
+
+.box-content .content {
+    text-align: center;
+}
+
+.info-right {
+    margin: 40px;
+    width: 52%;
+    text-align: left;
+}
+
+
+
+.first-box {
+    width: 50%;
+    margin: auto;
+    align-items: center;
+    display: flex;
+    margin-bottom: 2%;
+}
+
+.head-title {
+    width: 33%;
+    margin: auto auto 5% auto;
+    text-align: center;
+}
+
+.builder {
+    margin-bottom: 10%;
+    width: 100%;
+    text-align: center;
+    
+}
+
+.first-intro {
+    margin-bottom: 10%;
+}
+
 ul.list-useful {
     padding-top: 60px;
 }
 
 .title {
-    /* margin-bottom: 60px; */
+  
     font-weight: bold;
 }
 
@@ -16,7 +153,7 @@ ul.list-useful {
     font-weight: bold;
 }
 
-.useful-link {/* font-weight: bold; */margin-top: -24%;}
+.useful-link {margin-top: -24%;}
 
 ul.list-right {
     padding-left: 92px;
@@ -31,13 +168,13 @@ ul.list-right {
     width: 100%;
     background-color: #f7f7f9;
     padding-top: 10px;
-    margin-top: 10%;
+   
 }
 
 .learn-more {
     margin: 10px 50px;
     margin-top: 0%;
-    /* display: flex; */
+  
 }
 
 
@@ -58,7 +195,7 @@ ul.list-right {
     align-items: center;
     margin: auto;
     justify-content: center;
-    /* background-color: #f7f7f9; */
+  
 }
 
 .main {
@@ -73,10 +210,18 @@ img.img-right {
 }
 
 h3 {
-    /* text-align: center; */
+    
     font-size: 14px;
     font-weight: 300;
     text-align: left;
+}
+
+h3.small-head-title {
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 2%;
+    font-weight: bold;
+    margin-top: 20px;
 }
 
 h3.text1 {
@@ -99,14 +244,14 @@ h3.text2{
     display: flex;
     align-items: center;
     margin: auto;
-    /* justify-content: center; */
+ 
 }
 .second-box {
     width: 33%;
     display: flex;
     align-items: center;
     margin: auto;
-    /* justify-content: center; */
+  
 }
 
 h2.heading {
@@ -135,7 +280,7 @@ i.fa.fa-question-circle-o {
 a {
     color: white;
     text-decoration: none;
-    /* justify-content: space-between; */
+   
 }
 
 li {
@@ -143,7 +288,7 @@ li {
     color: white;
     font-size: 10px;
     padding: 10px 10px 10px 10px;
-    /* justify-content: space-between; */
+   
 }
 
 .logo-beTheme {
@@ -198,3 +343,4 @@ ul.list-left li.items a,ul.list-right li.items a,ul.list-useful li.item a {
 li{
     list-style: none;
 }
+.head{width: 100%; height: 100%;}
