--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 *{margin: 0;    padding: 0; font-family: Arial, Helvetica, sans-serif;}
-
+.navbar-expand-sm .navbar-nav{
+    margin-left: 25% !important;
+}
 .source p {
     font-size: 10px;
     margin-bottom: 30%;
@@ -390,6 +392,8 @@ i.fa.fa-question-circle-o {
     font-size: 20px;
     padding: 10px 50px;
     flex-grow: 1;
+    /* width: 10%; */
+    margin-left: 25%;
 }
 
 a {
@@ -462,7 +466,7 @@ body,html{height: 100%;}
     padding: 0 30px;
 }
 ul.list-left li.items a,ul.list-right li.items a,ul.list-useful li.item a {
-    color: #444;
+    color: #444 !important;
 }
 li{
     list-style: none;
